Adding a link for registration

--- a/contact-3.html
+++ b/contact-3.html
@@ -282,7 +282,7 @@
                 </ul>
               </div>
               <div class="header-btns justify-content-end">
-                <a class="btn btn--primary btn-header hvr-bounce-to-left" href="contact-3.html#">Get Started</a>
+                <a class="btn btn--primary btn-header hvr-bounce-to-left" href="https://docs.google.com/forms/u/1/d/1RyqXIUrNDTljNwTObsakQkWzJZkxSLxc4NMgBICURX0/viewform?edit_requested=true" target="_blank" rel="noopener noreferrer">Join!</a>
               </div>
             </div>
             <button class="navbar-toggler btn-close-off-canvas" type="button" data-toggle="collapse" data-target="#mobile-menu" aria-controls="mobile-menu" aria-expanded="false" aria-label="Toggle navigation">
