--- a/landing-1.html
+++ b/landing-1.html
@@ -282,7 +282,7 @@
                 </ul>
               </div>
             </div>
-            <div class="header-btns ml-auto ml-lg-0"><a class="btn btn--primary btn-header hvr-bounce-to-left" href="landing-1.html#">Get Started</a></div>
+            <a class="btn btn--primary btn-header hvr-bounce-to-left" href="https://docs.google.com/forms/u/1/d/1RyqXIUrNDTljNwTObsakQkWzJZkxSLxc4NMgBICURX0/viewform?edit_requested=true" target="_blank" rel="noopener noreferrer">Join!</a>
             <button class="navbar-toggler btn-close-off-canvas" type="button" data-toggle="collapse" data-target="#mobile-menu" aria-controls="mobile-menu" aria-expanded="false" aria-label="Toggle navigation">
               <i class="icon icon-simple-remove icon-close"></i>
               <i class="icon icon-menu-34 icon-burger"></i>
