--- a/landing-2.html
+++ b/landing-2.html
@@ -313,7 +313,7 @@
                       <input type="text" placeholder="Email address">
                       <i class="icon icon-email-84"></i>
                     </div>
-                    <button type="submit" class="btn--primary hvr-bounce-to-left">Get Started</button>
+                    <a class="btn btn--primary btn-header hvr-bounce-to-left" href="https://docs.google.com/forms/u/1/d/1RyqXIUrNDTljNwTObsakQkWzJZkxSLxc4NMgBICURX0/viewform?edit_requested=true" target="_blank" rel="noopener noreferrer">Join!</a>
                   </div>
                 </form>
               </div>
