--- a/case-study.html
+++ b/case-study.html
@@ -282,7 +282,7 @@
                     </li>
                   </ul>
                 </div>
-                <div class="header-btns justify-content-end"><a class="btn btn--primary btn-header hvr-bounce-to-left" href="case-study.html#">Get Started</a></div>
+                <a class="btn btn--primary btn-header hvr-bounce-to-left" href="https://docs.google.com/forms/u/1/d/1RyqXIUrNDTljNwTObsakQkWzJZkxSLxc4NMgBICURX0/viewform?edit_requested=true" target="_blank" rel="noopener noreferrer">Join!</a>
               </div>
               <button class="navbar-toggler btn-close-off-canvas" type="button" data-toggle="collapse" data-target="#mobile-menu" aria-controls="mobile-menu" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="icon icon-simple-remove icon-close"></i>
