--- a/landing-1.html
+++ b/landing-1.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Omega - Landing Page Template</title>
+  <title>Lighten Burden Project</title>
   <link rel="shortcut icon" href="https://finestdevs.com/demos/omega/image/png/favicon.png" type="image/x-icon">
   <!-- Bootstrap , fonts & icons  -->
   <link rel="stylesheet" href="plugins/bootstrap-4/css/bootstrap.min.css">
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="css/custom.css">
 </head>
 
-<body>
+<body style="background-color: #FFFBFB">
   <div id="loading">
     <div class="load-circle"><span class="one"></span></div>
   </div>
@@ -35,7 +35,7 @@
         <div class="container-fluid pr-lg--30 pl-lg--30">
           <nav class="navbar site-navbar offcanvas-active navbar-expand-lg navbar-light">
             <!-- Brand Logo-->
-            <div class="brand-logo"><a href="javascript:"><img src="image/png/l1-logo.png" alt=""></a></div>
+            <div class="brand-logo"><a href="javascript:"><img src="image/png/LightenBurden%20Logo.png" width="90" alt=""></a></div>
             <div class="collapse navbar-collapse" id="mobile-menu">
               <div class="navbar-nav ml-lg-auto mr--10">
                 <ul class="navbar-nav main-menu">
@@ -322,8 +322,8 @@
             </div>
             <div class="col-lg-7 order-lg-1" data-aos="fade-right" data-aos-duration="500" data-aos-once="true">
               <div class="hero-content py--50">
-                <h1 class="title">Redesigned,
-                  how you build landing page!</h1>
+                <h1 class="title">Lighten
+                  Burden Project</h1>
                 <p>Create custom landing pages with Omega that convert more visitors than any website. With lots of unique blocks, you can easily build a page without coding.</p>
                 <div class="hero-btn">
                   <a href="landing-1.html#" class="btn--primary hvr-bounce-to-left">Get Started</a>
