--- a/landing-3.html
+++ b/landing-3.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="css/custom.css">
 </head>
 
-<body>
+<body style="background-color: #FFFBFB">
   <div id="loading">
     <div class="load-circle"><span class="one"></span></div>
   </div>
