--- a/roles.html
+++ b/roles.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>404 Error- Project Lighten Burden</title>
+  <title>Roles- Project Lighten Burden</title>
   <link rel="shortcut icon" href="https://finestdevs.com/demos/omega/image/png/favicon.png" type="image/x-icon">
   <!-- Bootstrap , fonts & icons  -->
   <link rel="stylesheet" href="plugins/bootstrap-4/css/bootstrap.min.css">
@@ -29,9 +29,9 @@
     <div class="load-circle"><span class="one"></span></div>
   </div>
   <div class="site-wrapper overflow-hidden">
-    <div class="error-page">
+    <div class="career-page">
       <!-- Header Area -->
-      <header class="site-header bg--conflower-blue position-static">
+      <header class="site-header bg--conflower-blue">
         <div class="container-fluid pr-lg--30 pl-lg--30">
           <nav class="navbar site-navbar offcanvas-active navbar-expand-lg navbar-light">
             <!-- Brand Logo-->
@@ -40,7 +40,7 @@
               <div class="navbar-nav ml-lg-auto mr--10">
                 <ul class="navbar-nav main-menu">
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdown" href="404.html#features" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Demos</a>
+                    <a class="nav-link dropdown-toggle" id="navbarDropdown" href="career-page.html#features" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Demos</a>
                     <ul class="menu-dropdown dropdown-menu" aria-labelledby="navbarDropdown">
                       <li class="drop-menu-item">
                         <a href="landing-1.html">
@@ -85,7 +85,7 @@
                     </ul>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdown2" href="404.html#features" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
+                    <a class="nav-link dropdown-toggle" id="navbarDropdown2" href="career-page.html#features" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
                     <ul class="menu-dropdown dropdown-menu" aria-labelledby="navbarDropdown2">
                       <li class="drop-menu-item">
                         <a href="about.html">
@@ -93,7 +93,7 @@
                         </a>
                       </li>
                       <li class="drop-menu-item dropdown">
-                        <a class="dropdown-toggle" id="navbarDropdown21" href="404.html#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="dropdown-toggle" id="navbarDropdown21" href="career-page.html#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Career
                         </a>
                         <ul class="menu-dropdown dropdown-menu dropdown-right" aria-labelledby="navbarDropdown21">
@@ -110,7 +110,7 @@
                         </ul>
                       </li>
                       <li class="drop-menu-item dropdown">
-                        <a class="dropdown-toggle" id="navbarDropdown22" href="404.html#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="dropdown-toggle" id="navbarDropdown22" href="career-page.html#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Case Study
                         </a>
                         <ul class="menu-dropdown dropdown-menu dropdown-right" aria-labelledby="navbarDropdown22">
@@ -127,7 +127,7 @@
                         </ul>
                       </li>
                       <li class="drop-menu-item dropdown">
-                        <a class="dropdown-toggle" id="navbarDropdown23" href="404.html#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="dropdown-toggle" id="navbarDropdown23" href="career-page.html#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Blog
                         </a>
                         <ul class="menu-dropdown dropdown-menu dropdown-right" aria-labelledby="navbarDropdown23">
@@ -154,7 +154,7 @@
                         </ul>
                       </li>
                       <li class="drop-menu-item dropdown">
-                        <a class="dropdown-toggle" id="navbarDropdown24" href="404.html#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="dropdown-toggle" id="navbarDropdown24" href="career-page.html#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Pricing
                         </a>
                         <ul class="menu-dropdown dropdown-menu dropdown-right" aria-labelledby="navbarDropdown24">
@@ -171,7 +171,7 @@
                         </ul>
                       </li>
                       <li class="drop-menu-item dropdown">
-                        <a class="dropdown-toggle" id="navbarDropdown25" href="404.html#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="dropdown-toggle" id="navbarDropdown25" href="career-page.html#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Contact
                         </a>
                         <ul class="menu-dropdown dropdown-menu dropdown-right" aria-labelledby="navbarDropdown25">
@@ -193,7 +193,7 @@
                         </ul>
                       </li>
                       <li class="drop-menu-item dropdown">
-                        <a class="dropdown-toggle" id="navbarDropdown26" href="404.html#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="dropdown-toggle" id="navbarDropdown26" href="career-page.html#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Account
                         </a>
                         <ul class="menu-dropdown dropdown-menu dropdown-right" aria-labelledby="navbarDropdown26">
@@ -230,7 +230,7 @@
                         </ul>
                       </li>
                       <li class="drop-menu-item dropdown">
-                        <a class="dropdown-toggle" id="navbarDropdown27" href="404.html#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="dropdown-toggle" id="navbarDropdown27" href="career-page.html#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Utitlity
                         </a>
                         <ul class="menu-dropdown dropdown-menu dropdown-right" aria-labelledby="navbarDropdown27">
@@ -262,7 +262,7 @@
                         </ul>
                       </li>
                       <li class="drop-menu-item dropdown">
-                        <a class="dropdown-toggle" id="navbarDropdown27" href="404.html#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="dropdown-toggle" id="navbarDropdown27" href="career-page.html#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Essential
                         </a>
                         <ul class="menu-dropdown dropdown-menu dropdown-right" aria-labelledby="navbarDropdown27">
@@ -281,9 +281,7 @@
                   </li>
                 </ul>
               </div>
-              <div class="header-btns justify-content-end">
-                <a class="btn btn--primary btn-header hvr-bounce-to-left" href="https://docs.google.com/forms/u/1/d/1RyqXIUrNDTljNwTObsakQkWzJZkxSLxc4NMgBICURX0/viewform?edit_requested=true" target="_blank" rel="noopener noreferrer">Join!</a>
-              </div>
+              <a class="btn btn--primary btn-header hvr-bounce-to-left" href="https://docs.google.com/forms/u/1/d/1RyqXIUrNDTljNwTObsakQkWzJZkxSLxc4NMgBICURX0/viewform?edit_requested=true" target="_blank" rel="noopener noreferrer">Join!</a>
             </div>
             <button class="navbar-toggler btn-close-off-canvas" type="button" data-toggle="collapse" data-target="#mobile-menu" aria-controls="mobile-menu" aria-expanded="false" aria-label="Toggle navigation">
               <i class="icon icon-simple-remove icon-close"></i>
@@ -292,22 +290,131 @@
           </nav>
         </div>
       </header>
-      <main class="error-page-main">
+      <div class="inner-hero-area">
         <div class="container">
-          <div class="contents">
-            <div class="content-icon">
-              <img src="https://i.pinimg.com/originals/f9/a3/8f/f9a38f6fcb7682665bc5ecda614bd4d5.png" alt="">
-            </div>
-            <div class="content-text">
-              <h1 class="title">404's and Heartbreak</h1>
-              <p>The page you are looking for is not available or doesn’t<br class="d-none d-md-block"> belong to this website!</p>
-            </div>
-            <div class="content-btn">
-              <a href="404.html" class="btn btn-primary--outlined">Go Back to Homepage</a>
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="inner-hero-text">
+                <h1 class="title">Roles</h1>
+                <p>Meet the 6 possible roles at Project Lighten Burden</p>
+              </div>
             </div>
           </div>
         </div>
-      </main>
+      </div>
+      <div class="video-area">
+        <div class="container">
+          <div class="section-title pb--40">
+            <h2 class="title">Watch how we work here.</h2>
+            <div class="right-side">
+              <p>The 6 unique roles at Project Lighten Burden keep the operation running</p>
+            </div>
+          </div>
+          <div class="video-image mb-lg--80 mb--45">
+            <img src="image/png/video-image-2.png" alt="">
+            <a href="career-page.html" data-fancybox=""><i class="icon icon-triangle-right-17-2"></i></a>
+          </div>
+        </div>
+      </div>
+      <!-- Feature section -->
+      <div class="feature-section">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6 col-xl-4 col-md-6 mb--40">
+              <div class="feature--widget">
+                <div class="widget__icon">
+                  <span class="inner-circle circle-bg-blue"></span>
+                  <span class="outer-circle circle-bg-blue"></span>
+                </div>
+                <div class="widget__body">
+                  <h3 class="widget__heading h6">Media Team</h3>
+                  <p>The media team  produces promotional content and engaging infographics to support the organization and display our work</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 col-xl-4 col-md-6 mb--40">
+              <div class="feature--widget">
+                <div class="widget__icon">
+                  <span class="inner-circle circle-bg-red"></span>
+                  <span class="outer-circle circle-bg-red"></span>
+                </div>
+                <div class="widget__body">
+                  <h3 class="widget__heading h6">Marketing Team</h3>
+                  <p>The marketing team  is responsible for creating promotional pieces and strategies to get the word out</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 col-xl-4 col-md-6 mb--40">
+              <div class="feature--widget">
+                <div class="widget__icon">
+                  <span class="inner-circle circle-bg-yellow"></span>
+                  <span class="outer-circle circle-bg-yellow"></span>
+                </div>
+                <div class="widget__body">
+                  <h3 class="widget__heading h6">Finance Team</h3>
+                  <p>The Finance team organizes and accurately budgets our events and future endeavors</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 col-xl-4 col-md-6 mb--40">
+              <div class="feature--widget">
+                <div class="widget__icon">
+                  <span class="inner-circle circle-bg-green"></span>
+                  <span class="outer-circle circle-bg-green"></span>
+                </div>
+                <div class="widget__body">
+                  <h3 class="widget__heading h6">Event Planning Team</h3>
+                  <p>The Event Planning team organizes and plans all future charitable events held by Project Lighten Burden</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 col-xl-4 col-md-6 mb--40">
+              <div class="feature--widget">
+                <div class="widget__icon">
+                  <span class="inner-circle circle-bg-ash"></span>
+                  <span class="outer-circle circle-bg-ash"></span>
+                </div>
+                <div class="widget__body">
+                  <h3 class="widget__heading h6">Web Design Team</h3>
+                  <p>The Web Design team updates and constructs the offical project lighten burden website</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 col-xl-4 col-md-6 mb--40">
+              <div class="feature--widget">
+                <div class="widget__icon">
+                  <span class="inner-circle circle-bg-blue"></span>
+                  <span class="outer-circle circle-bg-blue"></span>
+                </div>
+                <div class="widget__body">
+                  <h3 class="widget__heading h6">Volunteers</h3>
+                  <p>Many of us are able to work from home, a café, or a park whenever we want. Yay freedom!</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Job section -->
+      <div class="cta-section section-padding">
+        <div class="shape-1" data-aos="fade-right" data-aos-duration="400" data-aos-once="true">
+          <img src="image/png/l1-cta-oval.png" alt="">
+        </div>
+        
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-lg-7 col-xl-6">
+              <div class="section-title text-center" data-aos="zoom-out" data-aos-duration="500" data-aos-once="true">
+                <h2 class="title">Want to join?</h2>
+                <p>Are you interested to join our team? Fill Out An Application!.</p>
+                <div class="cta-btn">
+                  <a class="btn btn--primary btn-header hvr-bounce-to-left" href="https://docs.google.com/forms/u/1/d/1RyqXIUrNDTljNwTObsakQkWzJZkxSLxc4NMgBICURX0/viewform?edit_requested=true" target="_blank" rel="noopener noreferrer">Join!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <!-- Footer section -->
       <div class="footer-section">
         <div class="container">
