--- a/404.html
+++ b/404.html
@@ -40,7 +40,7 @@
               <div class="navbar-nav ml-lg-auto mr--10">
                 <ul class="navbar-nav main-menu">
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdown" href="404.html#features" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Demos</a>
+                    <a class="nav-link dropdown-toggle" id="navbarDropdown" href="404.html#features" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Roles</a>
                     <ul class="menu-dropdown dropdown-menu" aria-labelledby="navbarDropdown">
                       <li class="drop-menu-item">
                         <a href="landing-1.html">
