--- a/contact-1.html
+++ b/contact-1.html
@@ -31,7 +31,7 @@
   <div class="site-wrapper overflow-hidden">
     <div class="contact-page">
       <!-- Header Area -->
-      <header class="site-header bg--conflower-blue">
+      <header class="site-header bg--#FFFBFB">
         <div class="container-fluid pr-lg--30 pl-lg--30">
           <nav class="navbar site-navbar offcanvas-active navbar-expand-lg navbar-light">
             <!-- Brand Logo-->
