--- a/contact-2.html
+++ b/contact-2.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="css/custom.css">
 </head>
 
-<body>
+<body style="background-color: #FFFBFB">
   <div id="loading">
     <div class="load-circle"><span class="one"></span></div>
   </div>
@@ -300,7 +300,7 @@
                 <h2 class="title">
                   Contact us
                 </h2>
-                <p>Create custom landing pages with Omega that converts <br class="d-none d-md-block"> more visitors than any website. </p>
+                <p>Contact Project Lighten burden<br class="d-none d-md-block"> for any questions</p>
               </div>
             </div>
           </div>
@@ -312,27 +312,19 @@
             <div class="col-xl-10">
               <div class="contact-widget-wrapper">
                 <div class="row">
-                  <div class="col-12 col-sm-6 col-md-4">
+                  <div class="col-12 col-sm-6 col-md-7">
                     <div class="contact-widget-block mb--55">
-                      <h3 class="title">Call us</h3>
-                      <p>+1-492-4918-395</p>
-                      <p>+14-394-409-591</p>
+                      <h3 class="title">Instagram</h3>
+                      <p>@projectlightenburden</p>
                     </div>
                   </div>
                   <div class="col-12 col-sm-6 col-md-4">
                     <div class="contact-widget-block mb--55">
                       <h3 class="title">Email us</h3>
-                      <p>info@mail.com</p>
-                      <p>support@mail.com</p>
+                      <p>projectlightenburden@gmail.com</p>
                     </div>
                   </div>
-                  <div class="col-12 col-sm-6 col-md-4">
-                    <div class="contact-widget-block mb--55">
-                      <h3 class="title">Call us</h3>
-                      <p>34 Madison Street,</p>
-                      <p>NY, USA 10005</p>
-                    </div>
-                  </div>
+                  
                 </div>
               </div>
             </div>
