--- a/404.html
+++ b/404.html
@@ -300,10 +300,10 @@
             </div>
             <div class="content-text">
               <h1 class="title">404's and Heartbreak</h1>
-              <p>The page you are looking for is not available or doesn’t<br class="d-none d-md-block"> belong to this website!</p>
+              <p>The page you are looking for is not available or doesn’t<br class="d-none d-md-block"> belong to this website</p>
             </div>
             <div class="content-btn">
-              <a href="404.html" class="btn btn-primary--outlined">Go Back to Homepage</a>
+              <a href="about.html" class="btn btn-primary--outlined">Go Back to Homepage</a>
             </div>
           </div>
         </div>
@@ -322,7 +322,7 @@
                 <div class="row">
                   <div class="col-6 col-lg-3">
                     <div class="single-footer mb--50 mb-lg--30">
-                      <h5 class="footer-title">About</h5>
+                      <h5 class="footer-title">Navigate</h5>
                       <ul class="footer-list">
                         <li><a href="about.html">Homepage</a></li>
                         <li><a href="roles.html">Roles</a></li>
@@ -341,8 +341,9 @@
           <div class="copyright-area">
             <div class="row align-items-center">
               <div class="col-sm-6  text-sm-left text-center mb-2 mb-sm-0">
-                 <p class="copyright-text">&copy; This website was made by Samar Chandora</p>
+                 <p class="copyright-text">&copy; This website was made by Samar Chandora and Roozbeh Ali</p>
                 <p class=>&copy; samar.veer@outlook.com</p>
+                <p class=>&copy; roozbeh.ali.2005@gmail.com</p>
               </div>
               <div class="col-sm-6 text-sm-right text-center">
                 <ul class="social-icons">
