--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="css/custom.css">
 </head>
 
-<body style="background-color: #FFFBFB">
+<body style="background-color: #ffffff">
   <div id="loading">
     <div class="load-circle"><span class="one"></span></div>
   </div>
@@ -50,7 +50,7 @@
                       </li>
                       <!--Blog-->
                       <li class="drop-menu-item">
-                        <a href="blog-regular.html">
+                        <a href="blog.html">
                           Blog
                         </a>
                       </li>
@@ -90,11 +90,11 @@
       <div class="inner-hero-area ">
         <div class="container">
           <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-10">
               <div class="inner-hero-text">
-                <h1 class="title">Project Lighten Burden</h1>
-                <p>We are a student-run organization that provides support to our beloved community by encouraging and providing students with volunteer opportunities run by our team to better our neighborhoods. We aim to build lasting leadership qualities in like-minded students and changing narratives about current students by helping everyone. By building a stronger community and provide service to ourselves and others we will be rewarded for our proud actions. </p>
-              </div>
+                <h1 class="title">Project Lighten Burden</h1> </span>
+                <p>We are a student-run organization that supports communities by encouraging and providing students with volunteer opportunities, and hosting charitable events to raise awareness and fund important causes . By providing unique opportunities to students we build vital qualities in like minded individuals, by teaching the value of helping others and allowing them to experience the self fulfillment of charity we hope to build a better tomorrow.  Some volunteering opportunities we provide are creating local food drives, collecting and donating second-hand clothing to clothing drives or homeless shelters, writing to the elderly, and a whole host of asynchronous volunteering opportunities to allow individuals to volunteer at the comfort of their home or by themselves. We aim to not only benefit the community but the volunteers of the organization as well by providing a way to gain volunteer experience/hours, as well as build lasting friendships among fellow volunteers.</p>
+                </div>
             </div>
           </div>
         </div>
@@ -103,14 +103,14 @@
         <div class="container">
           
           <div class="row mt--40 space-db--30">
-            <div class="col-lg-4 col-md-5 mb--30">
+            <div class="col-lg-4 col-md-7 mb--30">
               <div class="content-img">
-                <img src="image/png/easy-image-2-1.png" alt="">
+                <img src="image/png/pandemic.png" alt="">
               </div>
             </div>
             <div class="col-lg-8 col-md-7 mb--30">
               <div class="content-img">
-                <img src="image/png/easy-image-2-2.png" alt="">
+                <img src="image/png/helping.png" alt="">
               </div>
             </div>
           </div>
@@ -131,7 +131,7 @@
             <div class="col-lg-4 mb--75">
               <div class="team-widget">
                 <div class="widget-image">
-                  <img src="image/png/about-team-1.png" alt="">
+                  <img src="image/png/aman.png" alt="">
                 </div>
                 <div class="widget-text">
                   <h3 class="title">Aman Yadhav</h3>
@@ -142,7 +142,7 @@
             <div class="col-lg-4 mb--75">
               <div class="team-widget">
                 <div class="widget-image">
-                  <img src="image/png/about-team-3.png" alt="">
+                  <img src="image/png/about-team-1.png" alt="">
                 </div>
                 <div class="widget-text">
                   <h3 class="title">Gannan Ragulan</h3>
@@ -164,7 +164,7 @@
             <div class="col-lg-4 mb--75">
               <div class="team-widget">
                 <div class="widget-image">
-                  <img src="image/png/about-team-5.png" alt="">
+                  <img src="image/png/vish.png" alt="">
                 </div>
                 <div class="widget-text">
                   <h3 class="title">Vishwa Subhashraj</h3>
@@ -175,7 +175,7 @@
             <div class="col-lg-4 mb--75">
               <div class="team-widget">
                 <div class="widget-image">
-                  <img src="image/png/about-team-6.png" alt="">
+                  <img src="image/png/about-team-1.png" alt="">
                 </div>
                 <div class="widget-text">
                   <h3 class="title">Roozbeh Ali</h3>
